--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,7 +11,7 @@ html {
 a {
     display: inline-block;
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 
 ul,
@@ -25,6 +25,14 @@ body {
     font-family: "Fira Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
+    background-color: #171919;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.container {
+    max-width: 1920px;
+    margin: 0 auto;
 }
 
 .suptitle-left {
@@ -46,5 +54,80 @@ body {
         left: 0;
         top: 50%;
         transform: translateY(-50%);
+    }
+}
+
+.suptitle {
+    display: inline-block;
+    text-align: right;
+}
+
+.suptitle__head {
+    font-weight: 700;
+    font-size: 40px;
+    padding-right: 10px;
+    span {
+        font-weight: 300;
+    }
+}
+
+.title {
+    span {
+        display: inline-block;
+        font-weight: 700;
+        font-size: 200px;
+        color: rgba(#fff, 0.02);
+        position: relative;
+        transform: translateX(-50px);
+    }
+    h3 {
+        margin: 0;
+        font-weight: 800;
+        font-size: 80px;
+        color: #fff;
+        position: absolute;
+        top: 5px;
+        right: -5px;
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 80px;
+            height: 1px;
+            background-color: $green;
+        }
+    }
+}
+
+.btn {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 36px;
+    span {
+        padding: 17px 57px 17px 17px;
+        background-color: $green;
+        display: inline-block;
+        margin-left: 19px;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 1px;
+            background-color: #fff;
+            left: -10px;
+            top: 50%;
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            width: 25px;
+            height: 20px;
+            background-image: url("../images/arrow-right.svg");
+            top: 50%;
+            transform: translateY(-50%);
+            right: 17px;
+        }
     }
 }
