--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -56,6 +56,27 @@ body {
         transform: translateY(-50%);
     }
 }
+.descr-right {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 22px;
+    line-height: 32px;
+    text-align: right;
+    letter-spacing: 7.33333px;
+    text-transform: uppercase;
+    padding-right: 103px;
+    position: relative;
+    display: inline-block;
+    &::after {
+        content: "";
+        position: absolute;
+        width: 80px;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.5);
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
 
 .suptitle {
     display: inline-block;
@@ -66,6 +87,14 @@ body {
     font-weight: 700;
     font-size: 40px;
     padding-right: 10px;
+    span {
+        font-weight: 300;
+    }
+}
+
+.descr__head {
+    font-weight: 700;
+    font-size: 40px;
     span {
         font-weight: 300;
     }
