--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -120,6 +120,22 @@
     text-align: center;
 }
 
+.menu-btn {
+    display: none;
+    width: 40px;
+    position: absolute;
+    right: 20px;
+    top: 60px;
+    z-index: 7;
+    &__line {
+        border-radius: 2px;
+        margin-top: 5px;
+        width: 100%;
+        height: 5px;
+        background-color: $green;
+    }
+}
+
 .menu {
     padding-top: 30px;
     &__list {
@@ -251,9 +267,11 @@
 }
 
 .serf-box {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    &__wrapper {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 
 .serf-box__inner {
@@ -474,6 +492,7 @@
     background-image: url(../images/cocktail.png);
     background-position: bottom right;
     background-repeat: no-repeat;
+
     .slider-arrows {
         top: 220px;
         opacity: 0.5;
@@ -495,9 +514,10 @@
         margin-top: -250px;
         padding: 160px 0 132px;
         padding-left: 132px;
-        min-height: 320px;
+        // min-height: 320px;
         background-repeat: no-repeat;
         background-position: right center;
+        background-size: contain;
     }
 }
 
@@ -527,12 +547,16 @@
         font-weight: 800;
         font-size: 40px;
         line-height: 36px;
-        padding-left: 40px;
+        padding-left: 60px;
+        position: relative;
         span {
             text-align: right;
             display: block;
             font-size: 14px;
             letter-spacing: 5.25px;
+        }
+        .sum {
+            display: inline-block;
         }
     }
 }
@@ -542,9 +566,11 @@
 }
 
 .sleep {
-    padding-top: 60px;
-    padding-bottom: 120px;
-    position: relative;
+    padding: 160px 0 260px;
+    background-image: url(../images/frangipani.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+
     .slider-arrows {
         top: 220px;
         opacity: 0.5;
@@ -555,3 +581,210 @@
         margin-bottom: 40px;
     }
 }
+
+.shop {
+    background-image: url("../images/shop-Image.png");
+    background-repeat: no-repeat;
+    background-position: right center;
+
+    .descr__head {
+        margin-bottom: 47px;
+        position: relative;
+    }
+}
+
+.shop__slider-list {
+    margin-left: -12px;
+    li {
+        display: inline-block;
+        & + li {
+            margin-left: -25px;
+        }
+    }
+}
+
+.shop__slider {
+    padding-left: 132px;
+    margin-bottom: 10px;
+    &-inner {
+        display: flex;
+    }
+    &-info {
+        max-width: 555px;
+        width: 100%;
+        margin-left: 40px;
+        padding-top: 166px;
+    }
+    &-price {
+        font-weight: 800;
+        font-size: 32px;
+        line-height: 40px;
+        margin-bottom: 70px;
+        sup {
+            font-size: 22px;
+        }
+    }
+}
+
+.shop__slider-content {
+    display: flex;
+    padding-left: 100px;
+    align-items: flex-end;
+}
+
+.shop__extras-inner {
+    display: flex;
+}
+
+.shop__extras {
+    padding-left: 150px;
+    &-title {
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 40px;
+        margin-bottom: 25px;
+    }
+    &-box {
+        text-align: center;
+        margin-right: 86px;
+    }
+    &-img {
+        margin-bottom: 35px;
+        min-height: 105px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    &-name {
+        font-size: 18px;
+        line-height: 22px;
+        text-align: right;
+        letter-spacing: 8px;
+        margin-bottom: 16px;
+        opacity: 0.5;
+    }
+    &-price {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 40px;
+    }
+}
+
+.surfboard {
+    position: relative;
+}
+
+.surfboard-box {
+    position: absolute;
+    &__circle {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: #fff;
+        cursor: pointer;
+        position: relative;
+        &.active {
+            .circle-row {
+                transform: translate(-50%, -50%) rotate(0deg);
+            }
+        }
+    }
+}
+
+.circle-row {
+    background-color: $green;
+    position: absolute;
+    width: 12px;
+    height: 2px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0deg);
+    & + .circle-row {
+        transform: translate(-50%, -50%) rotate(90deg);
+    }
+}
+
+.surfboard-box__content {
+    display: none;
+    position: absolute;
+    width: 360px;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 24px;
+    padding-left: 104px;
+    top: -15px;
+    left: 40px;
+    &::before {
+        content: "";
+        position: absolute;
+        width: 80px;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.5);
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.surfboard-box__circle.active + .surfboard-box__content {
+    display: block;
+}
+
+.surfboard__position-1 {
+    right: 40px;
+    top: 215px;
+}
+.surfboard__position-2 {
+    left: 0;
+    top: 300px;
+}
+.surfboard__position-3 {
+    bottom: 70px;
+    left: 45px;
+    .surfboard-box__content {
+        display: none;
+        position: absolute;
+        width: 360px;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 24px;
+        padding-left: 0;
+        padding-right: 104px;
+        top: -15px;
+        left: -400px;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 80px;
+            height: 1px;
+            background-color: rgba(255, 255, 255, 0.5);
+            right: 0;
+            left: auto;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+}
+
+.footer {
+    text-align: center;
+    padding: 285px 0 34px;
+    .btn {
+        span {
+            padding: 17px;
+            &::after {
+                display: none;
+            }
+        }
+    }
+    &__copy {
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 1.05px;
+        opacity: 0.5;
+        padding-top: 10px;
+    }
+}
+
+@import "media";
